Fix dots jumping on mouseover after resize and at centerpoint

--- a/styles/page/Dots.module.scss
+++ b/styles/page/Dots.module.scss
@@ -17,7 +17,7 @@ $dots-xl-size-increase: 10vw;
 
 // "halo" that controls where the dot begins running away from the mouse on
 // large screens
-$dot-halo-width: 4rem;
+$dot-halo-width: 6rem;
 
 .dots {
   height: 100vh;
